# SFAP

./: .gitignore  README.md  mypy.ini
src/: Filter.py  Processor.py  PublishChannel.py  Publisher.py  Seeker.py  SeekerInput.py  pyproject.toml
src/SFAP/: Adapter.py  Filter.py  Processor.py  Publisher.py  Seeker.py  SeekerInput.py  __init__.py  adapter.py  async_items_handler.py  filter.py  passthrough_filter.py  processor.py  publish_channel.py  publisher.py  publisher_item.py  seeker_input.py  seeker_item.py  terminal_publisher.py  terminal_publisher_item.py
tests/: Weather.py  concurrency_test.py  full_concurrency_test.py  ollama_call.py  seeker_concurrency_test.py
tests/Weather/: Weather.py  WeatherFilter.py  WeatherSeeker.py  WeatherSeekerItem.py  WeatherTerminalPublisherAdapter.py  ollama_call.py
tools/: build.py  buildAndInstall.py  buildAndRunTests.py  commands.py
